modified animation of base page to fade on rotate, fixed sizing of circle div - does not overflow page on smaller screens - removed SOME dead code

--- a/client/public/animation.css
+++ b/client/public/animation.css
@@ -11,8 +11,13 @@
 
 @-webkit-keyframes rotateContainer {
     0% {
-        -webkit-transform: rotate(360deg);
+        -webkit-transform: rotate(0deg);
+        opacity: 1;
         -webkit-transform-origin: 50% 50%;
+    }
+    100% {
+        transform: rotate(360deg);
+        opacity: 0;
     }
 }
 
